Fix layout on Firefox

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@ html {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    display: grid;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    justify-items: center;
 }
 
 body {
@@ -13,18 +14,27 @@ body {
     background-color: black;
     margin: 0;
     padding: 0;
-    aspect-ratio: 4 / 3;
 }
 
 @media (max-aspect-ratio: 4 / 3) {
     body {
-        width: 100%;
+        width: 100vw;
+        height: 75vw;
+    }
+
+    html {
+        flex-direction: row;
     }
 }
 
 @media (min-aspect-ratio: 4 / 3) {
     body {
-        height: 100%;
+        height: 100vh;
+        width: 133vh;
+    }
+
+    html {
+        flex-direction: column;
     }
 }
 
